Aligned the input text boxes, just need to fix the select boxes, they are strangely not accepting the CSS rules i've given them...

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -1,3 +1,19 @@
 .error {
     color:red;
 }
+
+.inputData input{
+    margin-left:9em;
+    margin-top:10px;
+}
+
+.inputData label{
+    position:absolute;
+    margin-top:10px;
+}
+
+.inputDataSelect{
+    margin-left:9em;
+    margin-top:30px;
+}
+
